[package]
name = "ecs-ssm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1.47"
clap = { version = "4.5", features = [ "derive" ]}
dialoguer = { version = "0.11", features = [ "fuzzy-select" ] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2"
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
